methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: not found: value vuBiscuit
  if (vuBiscuit == true){
      ^MethodsReturning:11: error: not found: value vuBiscuit
while(vuBiscuit == false){
      ^MethodsReturning:15: error: not found: value vuBiscuit
  if (vuBiscuit == false ){
      ^